[gd_scene load_steps=4 format=3]

[ext_resource type="Texture2D" uid="uid://dblgrvvrattpf" path="res://assets/ui/icons/fireball_icon.png" id="1_3asxr"]
[ext_resource type="Script" path="res://scenes/ui/hud_bottom/buffs/buff.gd" id="1_vlcjw"]
[ext_resource type="Texture2D" uid="uid://d02e4ve532mdt" path="res://assets/white_square.png" id="2_d2cch"]

[node name="Buff" type="VBoxContainer"]
offset_right = 32.0
offset_bottom = 52.0
theme_override_constants/separation = 0
script = ExtResource("1_vlcjw")

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 1

[node name="Icon" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_3asxr")
expand_mode = 2

[node name="Sweep" type="TextureProgressBar" parent="PanelContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 0.392157)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.1
fill_mode = 4
nine_patch_stretch = true
texture_progress = ExtResource("2_d2cch")

[node name="StackLabel" type="Label" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "1"
vertical_alignment = 2

[node name="TimerLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 14
text = "1.5"
horizontal_alignment = 1
